# stablesoaps

./: .gitignore  README.md  config.yaml  deploy-aws.yaml  deploy-comfyui-aws.yaml  download-weights.yaml  pyproject.toml
backend/: cli.py  pyproject.toml
backend/notebooks/.ipynb_checkpoints/: scene-extractor-checkpoint.ipynb
backend/notebooks/data/: extracted_prompts.json  extracted_prompts_detailed_0.json  extracted_scenes.json  extracted_scenes_detailed.json
backend/src/stablesoaps/: cli.py  image_prep.py
configs/: extra_model_paths.yaml
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.cli.json
frontend/data/: base_oils.json  batches.json  essential_oils.json  label_contents.json  label_scene_prompts.json  label_styles.json  purchase_orders.json  recipes.json
frontend/prisma/: schema.prisma  seed.ts
frontend/src/: cli.ts  types.ts
frontend/src/app/: ApolloWrapper.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/batch/: page.tsx
frontend/src/components/: BatchForm.tsx  BatchesTable.tsx  DataTable.tsx  EditIngredientForm.tsx  IngredientsTable.tsx  InventoryItemForm.tsx  InventoryTable.tsx  NewBatchForm.tsx  PurchaseOrderForm.tsx  PurchaseOrderTable.tsx  RecipeForm.tsx  RecipeTable.tsx  SoapCarousel.tsx  UserSoapsGrid.tsx
frontend/src/graphql/: ApolloClient.ts  schema.ts
frontend/src/lib/: auth.ts  calculator.ts  withAuth.ts
nodes/: __init__.py  custom_nodes.py
notebooks/: scene-extractor.ipynb
prompts/: logs_230730.yaml
src/stablesoaps/: cache_models.py  structs.py  utils.py
(+20 files in other folders)
